# py_cmake_test

./: CMakeLists.txt  ReadMe.md  pyproject.toml
.github/workflows/: test.yaml
src/: CMakeLists.txt  ModPycmaketest.cpp
